kubernetes/main/apps/longhorn/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - internalsecure
  routes:
    - match: Host(`longhorn.internal.jacob-williams.me`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
          scheme: http
          passHostHeader: true
  ingressClass: traefik-controller
